--- a/practica01/formulario.html
+++ b/practica01/formulario.html
@@ -10,14 +10,15 @@
 
 <body>
     <form action="https://script.google.com/macros/s/AKfycbzYHVxnhlR8UoFT30jjCpIrEt8G4Er4EMb75an6Wx3fyUID8ATG2vwUQDVgmKyPIs2I/exec"></form>
-        <label for="" id="01">campo 01</label>
-        <input type="text" id="01"><br>
-        <label for="" id="02">campo 02</label>
-        <input type="text" id="02"><br>
-        <label for="" id="03">campo 03</label>
-        <input type="text" id="03"><br>
-        <label for="" id="04">campo 04</label>
-        <input type="text" id="04"><br>
+        <label for="01" id="">nombre 01</label>
+        <input type="text" id="01" name="nombre"><br>
+        <label for="02" id="">apellido 02</label>
+        <input type="text" id="02" name="apellido"><br>
+        <label for="03" id="">tel 03</label>
+        <input type="text" id="03" name="tel"><br>
+        <label for="04" id="">dir 04</label>
+        <input type="text" id="04" name="dir"><br>
+        <input type="submit" value="Enviar">
 
 </body>
 
