--- a/practica02/practica02.html
+++ b/practica02/practica02.html
@@ -59,6 +59,9 @@
         #guardar{
             background-color: blue;
         }
+        a[target="_blank"]{
+            background-color: yellow;
+        }
         
     </style>
     <link rel="stylesheet" href="practica02.css">
@@ -92,6 +95,8 @@
             obcaecati repellendus ad eveniet hic voluptas, illum ipsum, a id, dolore asperiores quis earum harum tempora
             veniam. Ex.</span>
     </div>
+    <a href="http://google.com" target="_blank">clickame</a>
+    <a href="http://yahoo.com" target="_blank">clickame2</a>
 </body>
 
 </html>
