--- a/practica03/ejemplo5.html
+++ b/practica03/ejemplo5.html
@@ -23,10 +23,11 @@
         img{
             width: 100%;
         }
-    
+  
     </style>
 </head>
 <body>
+    div.padre>(div.hijo{$$}>img)*5
     <div class="padre">
         <div class="hijo">01<img src="perr1.png" alt=""></div>
         <div class="hijo">02<img src="perr2.png" alt=""></div>
