--- a/practica05/formulario.html
+++ b/practica05/formulario.html
@@ -9,10 +9,23 @@
 </head>
 <body>
     <label for="msj">Mensaje</label>
-    <input type="text" id="ms">
-    <button id="btn">enviar</button>
+    <input type = "text" id="msj">
+    <button onclick="procesa()">enviar</button>
     <button onclick="test()">test</button>
     <p id="msjs"></p>
     <script src="bot.js"></script>
+</body>
+</html>
+
+   <ul id="lista">
+    <li id="el1">ele1</li>
+    <li id="el2">ele2</li>
+    <li id="el3">ele3</li>
+    <li id="el4">ele4</li>
+   </ul>
+   <input type="button" value="agregar" onclick="agregar()">
+   <script src = "agregar.js"></script>
+
+
 </body>
 </html>
